src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__numeric__ln_numeric.snap
---
source: src/expr/src/scalar/func/impls/numeric.rs
assertion_line: 210
expression: "#[sqlfunc(sqlname = \"lnnumeric\")]\nfn ln_numeric(a: Numeric) -> Result<Numeric, EvalError> {\n    log_guard_numeric(&a, \"ln\")?;\n    let mut cx = numeric::cx_datum();\n    let mut result = ln_fast(&mut cx, &a);\n    numeric::munge_numeric(&mut result).unwrap();\n    Ok(result)\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect
)]
pub struct LnNumeric;
impl<'a> crate::func::EagerUnaryFunc<'a> for LnNumeric {
    type Input = Numeric;
    type Output = Result<Numeric, EvalError>;
    fn call(&self, a: Self::Input) -> Self::Output {
        ln_numeric(a)
    }
    fn output_type(&self, input_type: mz_repr::SqlColumnType) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::EagerUnaryFunc::propagates_nulls(self);
        let nullable = output.nullable;
        output.nullable(nullable || (propagates_nulls && input_type.nullable))
    }
}
impl std::fmt::Display for LnNumeric {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("lnnumeric")
    }
}
fn ln_numeric(a: Numeric) -> Result<Numeric, EvalError> {
    log_guard_numeric(&a, "ln")?;
    let mut cx = numeric::cx_datum();
    let mut result = ln_fast(&mut cx, &a);
    numeric::munge_numeric(&mut result).unwrap();
    Ok(result)
}
