src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__numeric__log10_numeric.snap
---
source: src/expr/src/scalar/func/impls/numeric.rs
assertion_line: 219
expression: "#[sqlfunc(sqlname = \"log10numeric\")]\nfn log10_numeric(a: Numeric) -> Result<Numeric, EvalError> {\n    log_guard_numeric(&a, \"log10\")?;\n    let mut cx = numeric::cx_datum();\n    let d = a.digits() as i32;\n    let e = a.exponent();\n    let k = d - 1 + e;\n    let mut m = a.clone();\n    if k != 0 {\n        let neg_k = Numeric::from(-k);\n        cx.scaleb(&mut m, &neg_k);\n    }\n    if m == Numeric::from(1) {\n        let mut result = Numeric::from(k);\n        numeric::munge_numeric(&mut result).unwrap();\n        return Ok(result);\n    }\n    let mut result = ln_fast(&mut cx, &a);\n    cx.mul(&mut result, &LOG10_E);\n    numeric::munge_numeric(&mut result).unwrap();\n    Ok(result)\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect
)]
pub struct Log10Numeric;
impl<'a> crate::func::EagerUnaryFunc<'a> for Log10Numeric {
    type Input = Numeric;
    type Output = Result<Numeric, EvalError>;
    fn call(&self, a: Self::Input) -> Self::Output {
        log10_numeric(a)
    }
    fn output_type(&self, input_type: mz_repr::SqlColumnType) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::EagerUnaryFunc::propagates_nulls(self);
        let nullable = output.nullable;
        output.nullable(nullable || (propagates_nulls && input_type.nullable))
    }
}
impl std::fmt::Display for Log10Numeric {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("log10numeric")
    }
}
fn log10_numeric(a: Numeric) -> Result<Numeric, EvalError> {
    log_guard_numeric(&a, "log10")?;
    let mut cx = numeric::cx_datum();
    let d = a.digits() as i32;
    let e = a.exponent();
    let k = d - 1 + e;
    let mut m = a.clone();
    if k != 0 {
        let neg_k = Numeric::from(-k);
        cx.scaleb(&mut m, &neg_k);
    }
    if m == Numeric::from(1) {
        let mut result = Numeric::from(k);
        numeric::munge_numeric(&mut result).unwrap();
        return Ok(result);
    }
    let mut result = ln_fast(&mut cx, &a);
    cx.mul(&mut result, &LOG10_E);
    numeric::munge_numeric(&mut result).unwrap();
    Ok(result)
}
